--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^4.0.3
   sizer: ^2.0.15
+  go_router: ^12.1.1
 
 dev_dependencies:
   flutter_test:
